changes in css and fixes of visibility

--- a/src/components/ui/Mystories/Mystories.Styles.css
+++ b/src/components/ui/Mystories/Mystories.Styles.css
@@ -76,7 +76,7 @@ p.trackLink {
   padding: 6px !important;
 }
 #Mystores-home.station{ 
-  bottom: 34rem;
+  bottom: 26rem;
 }
 @media (max-width: 479px) {
   #Mystores-home {
