--- a/src/components/ui/NavMenu/NavMenu.styles.css
+++ b/src/components/ui/NavMenu/NavMenu.styles.css
@@ -131,13 +131,17 @@
 
 .eyeIconContainer {
     position: fixed;
+    top: 14px;
     z-index: 99999;
     right: 90px;
     font-size: 26px;
     color: #fff;
+    width: 50px;
+    height: 29px;
+    text-align: center;
 }
 @media (max-width: 479px) {
     .eyeIconContainer{
-        right: 70px;
+        right: 90px;
     }
 }
